--- a/engine/templates/successful_logout.html
+++ b/engine/templates/successful_logout.html
@@ -26,7 +26,7 @@
         You have been successfully logged out.<br><br>
     <div class="d-grid gap-2 col-6 mx-auto">
         <a href="/accounts/profile/" class="btn btn-outline-primary">Log in</a>
-        <a href="" class="btn btn-outline-primary">Sign up</a><br>
+        <a href="{%  url 'sign-up' %}" class="btn btn-outline-primary">Sign up</a><br>
       </div>
     </div>
 </center>
