--- a/engine/templates/index.html
+++ b/engine/templates/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Team-Communicator | Home</title>
+    <title>Home | Team-Communicator</title>
   </head>
   <body>
     
@@ -25,8 +25,8 @@
         <h1>💬 Team-Communicator</h1>
         Log in to message your team or sign up with few clicks.<br><br>
     <div class="d-grid gap-2 col-6 mx-auto">
-        <a href="/accounts/profile/" class="btn btn-outline-primary">Log in</a>
-        <a href="" class="btn btn-outline-primary">Sign up</a><br>
+        <a href="{%  url 'profile' %}" class="btn btn-outline-primary">Log in</a>
+        <a href="{%  url 'sign-up' %}" class="btn btn-outline-primary">Sign up</a><br>
       </div>
     </div>
 </center>
