--- a/engine/templates/registration/signup.html
+++ b/engine/templates/registration/signup.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Log in | Team-Communicator</title>
+    <title>Sign up | Team-Communicator</title>
   </head>
   <body>
     
@@ -23,7 +23,7 @@
     <center>
         <div class="card" style="width: 30rem; align-self: center;"><br>
             <h1>💬 Team-Communicator</h1><br>
-            Log in with form below.<br><br>
+            Create new user account with form below.<br><br>
             <div class="d-grid gap-2 col-6 mx-auto">
 
 {% if form.errors %}
@@ -39,26 +39,44 @@
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
+<form method="post" action="">
 {% csrf_token %}
 <table>
 <tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
+    <td>Username:</td>
+    <td><input type="text" name="username"></td>
 </tr>
 <tr>
 </tr>
 <tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
+    <td>First name:</td>
+    <td><input type="text" name="first_name"></td>
+</tr>
+<tr>
+</tr>
+<tr>
+    <td>Last name:</td>
+    <td><input type="text" name="last_name"></td>
+</tr>
+<tr>
+</tr>
+<tr>
+    <td>Email:</td>
+    <td><input type="email" name="email"></td>
+</tr>
+<tr>
+</tr>
+<tr>
+    <td>Password:</td>
+    <td><input type="password" name="password"></td>
 </tr>
 </table>
 <br>
-<input type="submit" value="login" class="btn btn-outline-primary">
-<input type="hidden" name="next" value="{{ next }}">
+<input type="submit" value="Create account" class="btn btn-outline-primary">
+<!-- <input type="hidden" name="next" value="{{ next }}"> -->
 </form>
 
-{# Assumes you setup the password_reset view in your URLconf #}
+<!-- {# Assumes you setup the password_reset view in your URLconf #} -->
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
 
 </div>
