--- a/engine/templates/team_channel.html
+++ b/engine/templates/team_channel.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Main channel | Team-Communicator</title>
+    <title>{{ team.name }}'s channel | Team-Communicator</title>
   </head>
   <body>
     
@@ -29,13 +29,13 @@
     <tr style="height: 100%;">
         <td style="width: 300px; padding: 10px; height: 100%; vertical-align: top;">
             <div class="d-grid gap-2">
-                <a href="{%  url 'profile' %}" class="btn btn-primary">Main channel</a>
-                {% for team in team_channels_list%}
-                <a href="/accounts/team/{{ team.id }}/" class="btn btn-primary">{{ team.name }}</a>
-                {% endfor %}
+                <a href="/accounts/team/settings/{{ team.id }}/" class="btn btn-warning">{{ team.name }}'s channel settings</a>
+                <a href="{%  url 'profile' %}" class="btn btn-primary">Go back</a>
               </div>
         </td>
         <td style="background-color: #ffffff; height: 100%; padding: 10px;">
+        <h1>{{ team.name }}'s channel</h1>
+        <p>{{ team.description }}</p>
         {% for record in messages_list %}
         {% if record.sender_id == request.user.id %}
         <div style="background-color: #6ea8fe; width: fit-content; padding: 5px; border-radius: 5px;">
