--- a/engine/templates/private_channel.html
+++ b/engine/templates/private_channel.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Main channel | Team-Communicator</title>
+    <title>{{ team.name }}'s channel | Team-Communicator</title>
   </head>
   <body>
     
@@ -28,18 +28,14 @@
 <table style="width: 100%; height: 100%">
     <tr style="height: 100%;">
         <td style="width: 300px; padding: 10px; height: 100%; vertical-align: top;">
-            <!-- LEFT MENU -->
             <div class="d-grid gap-2">
-                <a href="{%  url 'profile' %}" class="btn btn-primary">Main channel</a>
-                <a href="{%  url 'private-list' %}" class="btn btn-primary">Private channels</a>
-                <hr>
-                {% for team in team_channels_list%}
-                <a href="/accounts/team/{{ team.id }}/" class="btn btn-primary">{{ team.name }} team channel</a>
-                {% endfor %}
+                <a href="{% url 'private-list' %}" class="btn btn-primary">Go back to recipients list</a>
               </div>
-              <!-- LEFT MENU END -->
         </td>
         <td style="background-color: #ffffff; height: 100%; padding: 10px;">
+        <h1>Private channel</h1>
+        <p>Private conversation betweend <b>{{ request.user.first_name }} {{ request.user.last_name }}</b> and <b>{{ receiver.first_name }} {{ receiver.last_name }}</b></p>
+        <hr>
         {% for record in messages_list %}
         {% if record.sender_id == request.user.id %}
         <div style="background-color: #6ea8fe; width: fit-content; padding: 5px; border-radius: 5px;">
@@ -59,7 +55,7 @@
             <form action="" method="POST">
                 {% csrf_token %}
                 <div class="input-group mb-3">
-                    <span class="input-group-text" id="inputGroup-sizing-default">{{ sender_name }}'s Message:</span>
+                    <span class="input-group-text" id="inputGroup-sizing-default">{{ request.user.first_name }}'s Message:</span>
                     <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" name="message_field">
                     <input type="submit" value="Send" class="btn btn-primary">
                   </div>
