--- a/engine/templates/private_list.html
+++ b/engine/templates/private_list.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Main channel | Team-Communicator</title>
+    <title>Private channels | Team-Communicator</title>
   </head>
   <body>
     
@@ -28,43 +28,31 @@
 <table style="width: 100%; height: 100%">
     <tr style="height: 100%;">
         <td style="width: 300px; padding: 10px; height: 100%; vertical-align: top;">
-            <!-- LEFT MENU -->
             <div class="d-grid gap-2">
-                <a href="{%  url 'profile' %}" class="btn btn-primary">Main channel</a>
-                <a href="{%  url 'private-list' %}" class="btn btn-primary">Private channels</a>
-                <hr>
-                {% for team in team_channels_list%}
-                <a href="/accounts/team/{{ team.id }}/" class="btn btn-primary">{{ team.name }} team channel</a>
-                {% endfor %}
+              <a href="{%  url 'profile' %}" class="btn btn-primary">Go back</a>
               </div>
-              <!-- LEFT MENU END -->
         </td>
         <td style="background-color: #ffffff; height: 100%; padding: 10px;">
-        {% for record in messages_list %}
-        {% if record.sender_id == request.user.id %}
-        <div style="background-color: #6ea8fe; width: fit-content; padding: 5px; border-radius: 5px;">
-        {% else %}
-        <div style="background-color: #cfe2ff; width: fit-content; padding: 5px; border-radius: 5px;">
-        {% endif %}
-            <b>{{ record.sender.first_name }} {{ record.sender.last_name }}</b> <i>{{ record.created }}</i><br>
-            {{ record.message }}<br>
-        </div>
-        <div style="height: 10px;"></div>
-        {% endfor %}
+          <h1>Private channels</h1>
+          <p>{{ request.user.first_name }}, please select an message recipient from the drop-down list below:</p>
+            <form action="" method="POST">
+                {% csrf_token %}
+                <select name="recipient">
+                    <option selected disabled>Message recipient</option>
+                    {% for user in users_list %}
+                    {% if request.user.id != user.id %}
+                    <option value="{{ user.id }}">{{ user.first_name}} {{ user.last_name }}</option>
+                    {% endif %}
+                    {% endfor %}
+                  </select>
+                  <br><br>
+                <button type="submit" class="btn btn-primary">Go to private channel</button>
+              </form>
         </td>
     </tr>
     <tr>
         <td></td>
         <td style="padding: 10px;">
-            <form action="" method="POST">
-                {% csrf_token %}
-                <div class="input-group mb-3">
-                    <span class="input-group-text" id="inputGroup-sizing-default">{{ sender_name }}'s Message:</span>
-                    <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" name="message_field">
-                    <input type="submit" value="Send" class="btn btn-primary">
-                  </div>
-                
-            </form>
         </td>
     </tr>
 </table>
