--- a/engine/templates/private_channel.html
+++ b/engine/templates/private_channel.html
@@ -4,11 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/static/styles.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>{{ team.name }}'s channel | Team-Communicator</title>
+    <title>Private channel | Team-Communicator</title>
   </head>
   <body>
     
@@ -18,13 +19,15 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 
-<div style="width: 100%; height: 55px; background-color: #031633">
-    <h1 style="color: white">💬 Team-Communicator
+<!-- TOP BAR -->
+<div class="top-bar">
+    <h1 class="top-bar-h1"><img src="/static/icon.png" alt="Team-Communicator" class="logo-small"> Team-Communicator
         <a href="{%  url 'profile-settings' %}" class="btn btn-outline-warning">Profile settings</a>
         <a href="{%  url 'team-add' %}" class="btn btn-outline-success">Create new team channel</a>
         <a href="{%  url 'logout' %}" class="btn btn-outline-danger">Log out</a>
     </h1>
 </div>
+<!-- TOP BAR END -->
 <table style="width: 100%; height: 100%">
     <tr style="height: 100%;">
         <td style="width: 300px; padding: 10px; height: 100%; vertical-align: top;">
