--- a/engine/templates/successful_logout.html
+++ b/engine/templates/successful_logout.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/static/styles.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -22,7 +23,8 @@
     <br>
 <center>
     <div class="card" style="width: 30rem; align-self: center;"><br>
-        <h1>💬 Team-Communicator</h1>
+      <img src="/static/icon.png" alt="Team-Communicator" class="logo-big">
+        <h1>Team-Communicator</h1>
         You have been successfully logged out.<br><br>
     <div class="d-grid gap-2 col-6 mx-auto">
         <a href="/accounts/profile/" class="btn btn-outline-primary">Log in</a>
