--- a/engine/templates/team_settings_add_user.html
+++ b/engine/templates/team_settings_add_user.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
-    <title>Create new team channel | Team-Communicator</title>
+    <title>Add user to {{ team.name }} | Team-Communicator</title>
   </head>
   <body>
     
@@ -31,32 +31,33 @@
 <table style="width: 100%; height: 100%">
     <tr style="height: 100%;">
         <td style="width: 300px; padding: 10px; height: 100%; vertical-align: top;">
-            <!-- LEFT MENU -->
             <div class="d-grid gap-2">
-              <a href="{%  url 'profile' %}" class="btn btn-primary">Main channel</a>
-              <a href="{%  url 'private-list' %}" class="btn btn-primary">Private channels</a>
-              <hr>
-              {% for team in team_channels_list%}
-              <a href="/accounts/team/{{ team.id }}/" class="btn btn-primary">{{ team.name }} team channel</a>
-              {% endfor %}
-            </div>
-            <!-- LEFT MENU END -->
+                <a href="/accounts/team/settings/{{ team.id }}/" class="btn btn-primary">Go back to {{ team.name }} team channel</a>
+              </div>
         </td>
         <td style="background-color: #ffffff; height: 100%; padding: 10px;">
-          <h1>Create new team channel</h1>
-          <p>Use form below to create new channel for your team</p>
+          <h1>Add new user to {{ team.name }} team</h1>
+          <p>Use form below to add new user to {{ team.name }} team.<br>
+            Adding users who are already in the team is disabled</p>
             <form action="" method="POST">
                 {% csrf_token %}
-                <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Channel name</label>
-                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="team_name" maxlength="64">
-                  <div id="emailHelp" class="form-text">Usually a name of your team.</div>
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Description</label>
-                  <input type="text" class="form-control" id="exampleInputPassword1" name="team_description" maxlength="256">
-                </div>
-                <button type="submit" class="btn btn-primary">Create</button>
+                {% for user in users_list %}
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="add-user" id="exampleRadios1" value="{{ user.id }}" checked>
+                    <label class="form-check-label" for="exampleRadios1">
+                      {{ user.first_name }} {{ user.last_name }}
+                    </label>
+                  </div>
+                  {% endfor %}
+                  </div>
+                  <div class="form-check disabled">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" disabled>
+                    <label class="form-check-label" for="exampleRadios3">
+                      Disabled radio
+                    </label>
+                  </div>
+                  <br>
+                <button type="submit" class="btn btn-primary">Save changes</button>
               </form>
         </td>
     </tr>
