Update and small fixes of tempaltes

--- a/engine/templates/team_add.html
+++ b/engine/templates/team_add.html
@@ -48,9 +48,8 @@
             <form action="" method="POST">
                 {% csrf_token %}
                 <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Channel name</label>
+                  <label for="exampleInputEmail1" class="form-label">Team name</label>
                   <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="team_name" maxlength="64">
-                  <div id="emailHelp" class="form-text">Usually a name of your team.</div>
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">Description</label>
