--- a/engine/templates/team_settings.html
+++ b/engine/templates/team_settings.html
@@ -36,7 +36,7 @@
               </div>
         </td>
         <td style="background-color: #ffffff; height: 100%; padding: 10px;">
-          <h1>{{ team.name }}'s settings</h1>
+          <h1>{{ team.name }} team settings</h1>
           <p>{{ team.description }}</p>
           <h6>Please choose action from the list below</h6>
           <a href="/accounts/team/settings/edit/{{ team.id }}/" class="btn btn-warning">Edit name and description</a>
