--- a/engine/templates/team_settings_denied.html
+++ b/engine/templates/team_settings_denied.html
@@ -32,11 +32,11 @@
     <tr style="height: 100%;">
         <td style="width: 300px; padding: 10px; height: 100%; vertical-align: top;">
             <div class="d-grid gap-2">
-                <a href="/accounts/team/settings/{{ team.id }}/" class="btn btn-primary">Go back to main {{ team.name }}' settings</a>
+                <a href="/accounts/team/settings/{{ team.id }}/" class="btn btn-primary">Go back to main {{ team.name }} team settings</a>
               </div>
         </td>
         <td style="background-color: #ffffff; height: 100%; padding: 10px;">
-          <h1 style="color: red">Acces denied!</h1>
+          <h1 style="color: red">Access denied!</h1>
           <p>You're not owner of {{ team.name}} channel!</p>
         </td>
     </tr>
