--- a/engine/templates/team_settings_edit.html
+++ b/engine/templates/team_settings_edit.html
@@ -32,7 +32,7 @@
     <tr style="height: 100%;">
         <td style="width: 300px; padding: 10px; height: 100%; vertical-align: top;">
             <div class="d-grid gap-2">
-                <a href="/accounts/team/settings/{{ team.id }}/" class="btn btn-primary">Go back to {{ team.name }} team channel</a>
+              <a href="/accounts/team/settings/{{ team.id }}/" class="btn btn-primary">Go back to {{ team.name }} team main settings</a>
               </div>
         </td>
         <td style="background-color: #ffffff; height: 100%; padding: 10px;">
